<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.jruby</groupId>
  <artifactId>jruby-graal</artifactId>
  <packaging>jar</packaging>
  <version>0.1-SNAPSHOT</version>
  <name>jruby-graal</name>
  <url>https://github.com/jruby/jruby-graal.jar</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>7</version>
  </parent>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:https://github.com/jruby/jruby-graal.git</connection>
    <developerConnection>scm:git:git@github.com:jruby/jruby-graal.git</developerConnection>
    <url>https://github.com/jruby-graal/jruby-graal</url>
  </scm>

  <dependencies>
    <dependency>
      <groupId>org.jruby</groupId>
      <artifactId>jruby</artifactId>
      <version>9.1.13.0</version>
    </dependency>
    <!--<dependency>-->
      <!--<groupId>graal</groupId>-->
      <!--<artifactId>graal</artifactId>-->
      <!--<version>0</version>-->
      <!--<systemPath>/Users/headius/projects/graal/graal/compiler/mxbuild/dists/graal.jar</systemPath>-->
      <!--<scope>system</scope>-->
    <!--</dependency>-->
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <compilerArgs>
            <arg>--add-modules</arg><arg>jdk.internal.vm.ci</arg>
            <arg>--add-exports</arg><arg>jdk.internal.vm.ci/jdk.vm.ci.code=ALL-UNNAMED</arg>
            <arg>--add-exports</arg><arg>jdk.internal.vm.ci/jdk.vm.ci.hotspot=ALL-UNNAMED</arg>
            <arg>--add-exports</arg><arg>jdk.internal.vm.ci/jdk.vm.ci.meta=ALL-UNNAMED</arg>
            <arg>--add-exports</arg><arg>jdk.internal.vm.ci/jdk.vm.ci.runtime=ALL-UNNAMED</arg>
            <arg>--add-exports</arg><arg>jdk.internal.vm.ci/jdk.vm.ci.services=ALL-UNNAMED</arg>
          </compilerArgs>
          <source>9</source>
          <target>9</target>
          <fork>true</fork>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
